src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Roboto';
  src: url('/fonts/Roboto.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Barlow';
  src: url('/fonts/Barlow.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

:root {
  /* Font Sizes */
  --step-00: clamp(0.8333rem, 0.8302rem + 0.0153vi, 0.844rem);
  --step-0: clamp(1rem, 0.9628rem + 0.1802vi, 1.125rem);
  --step-1: clamp(1.2rem, 1.1109rem + 0.4319vi, 1.4996rem);
  --step-2: clamp(1.44rem, 1.2738rem + 0.8058vi, 1.999rem);
  --step-3: clamp(1.728rem, 1.4495rem + 1.3502vi, 2.6647rem);
  --step-4: clamp(2.0736rem, 1.6341rem + 2.131vi, 3.552rem);
  --step-5: clamp(2.4883rem, 1.8204rem + 3.2382vi, 4.7348rem);
  --step-6: clamp(2.986rem, 1.9973rem + 4.7936vi, 6.3115rem);
  --step-7: clamp(3.5832rem, 2.1472rem + 6.9623vi, 8.4132rem);
  --step-8: clamp(4.2998rem, 2.244rem + 9.9676vi, 11.2149rem);

    /* Line Heights */
    --flat: 1;
    --fine: 1.15;
    --standard: 1.5;
    --loose: 1.7;

      /* Section Gap */
  --space-section: clamp(10rem, 7.5327rem + 11.9626vi, 18rem);
}

body {
  font-size: var(--step-0);
  line-height: var(--standard);
  color: #0d111c;
  overflow-x: clip !important;
  transition-property: all !important;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
  transition-duration: 300ms !important;
}

h1,
h2,
h3,
button,
input,
label {
  line-height: 1.1;
}

.container {
  max-width: clamp(16rem, 100%, 90rem);
  margin: 0 auto;
  padding: 0 1.5rem;
}

.balanced {
  text-wrap: balance;
}

.pretty {
  text-wrap: pretty;
}

